<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/analytics_travels_list_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travels_list"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView4"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/analytics_total_distance_text" />

    <TextView
        android:id="@+id/analytics_total_distance_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/distance_traveled"
        android:textColor="@color/colorPrimaryText"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/analytics_travels_list_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/you_earned_tot_money" />

    <TextView
        android:id="@+id/you_earned_tot_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/money_earned"
        android:textColor="@color/colorPrimaryText"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/analytics_total_distance_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/analytics_travels_list_text">


        <ListView
            android:id="@+id/analytics_list"
            android:layout_width="match_parent"
            android:layout_height="620dp" />
    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>